# ocr

./: .gitignore  Bridge.cpp  Bridge.java  CMakeLists.txt  CMakeLists.txt.backup  CMakeLists.txt.new  README.md  api.cpp  api.h  api.i  api_wrap.cxx  ocr.py  test.cpp  test.py
etc/: cvit_ocr_weights.xml  english.txt  input.txt  lookup.txt
ghosts/: CMakeLists.txt  NetcdfDataset.cpp  NetcdfDataset.h  NetcdfFile.cpp  NetcdfFile.h
nnl/: ActivationFunctions.cpp  ActivationFunctions.h  BiasLayer.cpp  BiasLayer.h  BlockLayer.cpp  BlockLayer.h  BlockTransformer.cpp  BlockTransformer.h  CMakeLists.txt  ClassificationOutputLayer.cpp  ClassificationOutputLayer.h  Connection.cpp  Connection.h  DataExportHandler.cpp  DataExportHandler.h  DataExporter.cpp  DataExporter.h  DataSequence.h  ExportParam.cpp  ExportParam.h  ExportVal.h  ExportVect.cpp  ExportVect.h  GradientDescentWeights.cpp  GradientDescentWeights.h  GradientFollower.h  GradientFollowerMaker.cpp  GradientFollowerMaker.h  GradientTest.cpp  GradientTest.h  Helpers.h  InputConnsImpl.cpp  InputConnsImpl.h  InputLayer.cpp  InputLayer.h  LabellingOutputLayer.cpp  LabellingOutputLayer.h  Layer.h  NDimBackpropLayer.h  NDimLayer.h  (+42 more)
ocr/: api.cpp  api.h  test.cpp
ports/java/: Bridge.h
ports/python/: api.i  ocr.py  setup.py  test.py
xerces-c/: CMakeLists.txt  config.h  config.h.in
xerces-c/src/: config.h
xerces-c/src/xercesc/framework/: XMLAttDef.cpp  XMLEntityDecl.cpp  XMLNotationDecl.cpp
xerces-c/src/xercesc/framework/psvi/: XSNamedMap.hpp
xerces-c/src/xercesc/util/: OutOfMemoryException.hpp  PlatformUtils.cpp
xerces-c/src/xercesc/util/Transcoders/Iconv/: IconvTransService.cpp
