cmake_minimum_required (VERSION 2.6)
project(xercesc)
file(GLOB_RECURSE CPP_SOURCES src/*.cpp)
file(GLOB_RECURSE C_SOURCES src/xercesc/*.c)
file(GLOB STR_LIB src/*.c)
set_source_files_properties(${C_SOURCES} PROPERTIES LANGUAGE CXX)
add_definitions(-DHAVE_CONFIG_H -DXERCES_TMPLSINC -DXERCES_HAS_CPP_NAMESPACE)
#file(GLOB_RECURSE HEADER_FILES src/*.h src/*.hpp)

INCLUDE(CheckIncludeFiles)
CHECK_INCLUDE_FILES(cpuid.h HAVE_CPUID_H)
CHECK_INCLUDE_FILES(CoreServices/Coreservices.h HAVE_CORESERVICES_CORESERVICES_H)
CHECK_INCLUDE_FILES(ctype.h HAVE_CTYPE_H)
CHECK_INCLUDE_FILES(dlfcn.h HAVE_DLFCN_H)
CHECK_INCLUDE_FILES(endian.h HAVE_ENDIAN_H)
CHECK_INCLUDE_FILES(errno.h HAVE_ERRNO_H)
CHECK_INCLUDE_FILES(fcntl.h HAVE_FCNTL_H)
CHECK_INCLUDE_FILES(float.h HAVE_FLOAT_H)
CHECK_INCLUDE_FILES(arpa/inet.h HAVE_ARPA_INET_H)
CHECK_INCLUDE_FILES(arpa/nameser_compat.h HAVE_ARPA_NAMESER_COMPAT_H)
CHECK_INCLUDE_FILES(iconv.h HAVE_ICONV_H)
CHECK_INCLUDE_FILES(inttypes.h HAVE_INTTYPES_H)
CHECK_INCLUDE_FILES(langinfo.h HAVE_LANGINFO_H)
CHECK_INCLUDE_FILES(limits.h HAVE_LIMITS_H)
CHECK_INCLUDE_FILES(locale.h HAVE_LOCALE_H)
CHECK_INCLUDE_FILES(memory.h HAVE_MEMORY_H)
CHECK_INCLUDE_FILES(unistd.h HAVE_UNISTD_H)
CHECK_INCLUDE_FILES(sys/time.h HAVE_SYS_TIME_H)
CHECK_INCLUDE_FILES(wchar.h HAVE_WCHAR_H)
CHECK_INCLUDE_FILES(wctype.h HAVE_WCTYPE_H)


INCLUDE(CheckFunctionExists)
CHECK_FUNCTION_EXISTS(catgets HAVE_CATGETS)
CHECK_FUNCTION_EXISTS(catopen HAVE_CATOPEN)
CHECK_FUNCTION_EXISTS(clock_gettime HAVE_CLOCK_GETTIME)
CHECK_FUNCTION_EXISTS(ftime HAVE_FTIME)
CHECK_FUNCTION_EXISTS(getaddrinfo HAVE_GETADDRINFO)
CHECK_FUNCTION_EXISTS(getcwd HAVE_GETCWD)
CHECK_FUNCTION_EXISTS(gethostbyaddr HAVE_GETHOSTBYADDR)
CHECK_FUNCTION_EXISTS(gethostbyname HAVE_GETHOSTBYNAME)
CHECK_FUNCTION_EXISTS(gettimeofday HAVE_GETTIMEOFDAY)
CHECK_FUNCTION_EXISTS(iconv HAVE_ICONV)
CHECK_FUNCTION_EXISTS(iconv_open HAVE_ICONV_OPEN)
CHECK_FUNCTION_EXISTS(iconv_close HAVE_ICONV_CLOSE)
CHECK_FUNCTION_EXISTS(localeconv HAVE_LOCALECONV)
CHECK_FUNCTION_EXISTS(mblen HAVE_MBLEN)
CHECK_FUNCTION_EXISTS(mbrlen HAVE_MBRLEN)
CHECK_FUNCTION_EXISTS(mbsrtows HAVE_MBSRTOWS)
CHECK_FUNCTION_EXISTS(memmove HAVE_MEMMOVE)
CHECK_FUNCTION_EXISTS(strdup HAVE_STRDUP)
CHECK_FUNCTION_EXISTS(stricmp HAVE_STRICMP)
CHECK_FUNCTION_EXISTS(strcasecmp HAVE_STRCASECMP)
CHECK_FUNCTION_EXISTS(strncasecmp HAVE_STRNCASECMP)
CHECK_FUNCTION_EXISTS(towupper HAVE_TOWUPPER)
CHECK_FUNCTION_EXISTS(towlower HAVE_TOWLOWER)

INCLUDE(CheckLibraryExists)
#CHECK_LIBRARY_EXISTS(nsl HAVE_LIBNSL)
#CHECK_LIBRARY_EXISTS(socket HAVE_LIBSOCKET)

#MESSAGE(${HEADER_FILES})
set(XERCES_USE_FILEMGR_POSIX 1)
#XERCES_USE_FILEMGR_WINDOWS 
#set(XERCES_USE_MSGLOADER_ICONV 1)
#XERCES_USE_MSGLOADER_ICU
set(XERCES_USE_MSGLOADER_INMEMORY 1)
#XERCES_USE_MUTEXMGR_NOTHREAD
set(XERCES_USE_MUTEXMGR_POSIX 1)
#XERCES_USE_MUTEXMGR_WINDOWS
#XERCES_USE_NETACCESSOR_CFURL
#XERCES_USE_NETACCESSOR_CURL
#set(XERCES_USE_NETACCESSOR_SOCKET 1)
#XERCES_USE_NETACCESSOR_WINSOCK
set(XERCES_USE_TRANSCODER_GNUICONV 1)
#set(XERCES_USE_TRANSCODER_ICONV 1)
#XERCES_USE_TRANSCODER_ICU
#XERCES_USE_TRANSCODER_MACOSUNICODECONVERTER
#XERCES_USE_TRANSCODER_WINDOWS
#XERCES_XMLCH_T

configure_file(config.h.in config.h)
include_directories(${CMAKE_BINARY_DIR})
include_directories(src)
add_library(xercesc SHARED ${CPP_SOURCES} ${C_SOURCES} ${STR_LIB})
